--- a/web/src/styles/variables.scss
+++ b/web/src/styles/variables.scss
@@ -1,9 +1,9 @@
-// sidebar
-$menuText:#bfcbd9;
+// sidebar  左侧栏
+$menuText:#000000;
 $menuActiveText:#409EFF;
 $subMenuActiveText:#f4f4f5; //https://github.com/ElemeFE/element/issues/12951
 
-$menuBg:#304156;
+$menuBg:#E6E0E7;
 $menuHover:#263445;
 
 $subMenuBg:#1f2d3d;
